added hero section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,25 @@
 
 
     <div class="hero-section">
+        <div class="title_section">
+            <div>
 
+                <h1 class="heading__">
+                    Go Healthy
+                </h1>
+                <p class="desc">
+                    A good laugh and a long sleep are the best cures in the doctor’s book. </p>
+            </div>
+            <a href="">
+                <button class="btn_book_appointment btn_1">
+
+                    Book Appointment
+                </button>
+            </a>
+        </div>
+        <div class="img_section">
+            <img class="img_doctor" src="assests/doctor.svg" alt="" srcset="">
+        </div>
     </div>
 </body>
 <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
