first_and_second commit

--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
             </div>
         </div>
     </nav>
-
+    <div>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic quis corporis tempora ipsum enim ut, placeat error expedita accusamus minima perferendis aliquam est ducimus praesentium cupiditate rem esse. Quas, perferendis!
+    </div>
+    <div>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem maiores, eveniet earum et maxime iste magni ipsa sunt saepe doloribus cum a soluta mollitia assumenda beatae nobis, voluptatibus deleniti molestias.
+    </div>
     <div>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt hic molestiae eius doloribus iure eaque minima excepturi officia! In modi maxime ullam odit eius numquam, labore quo nisi ratione ut.
     </div>
