--- a/login.html
+++ b/login.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Login</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <title>Go Healthy</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light bg_color nav_fixed">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light bg_color nav_fixed">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img class="img_logo" src="assests/logo3.png" alt="" srcset="" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,30 +44,27 @@
 
 
 
-    
+    <div class="don"></div>
 
-    <div class="hero-section">
-        <div class="title_section">
-            <div>
-
-                <h1 class="heading__">
-                    Go Healthy
-                </h1>
-                <p class="desc">
-                    A good laugh and a long sleep are the best cures in the doctor’s book. </p>
-            </div>
-            <a href="">
-                <button class="btn_book_appointment btn_1">
-
-                    Book Appointment
-                </button>
-            </a>
-        </div>
-        <div class="img_section">
-            <img class="img_doctor" src="assests/doctor.svg" alt="" srcset="">
-        </div>
+    <div class="container">
+    	<center>
+    	<div class="log">
+    		<form method="POST">
+    			<table>
+    				<tr>
+    					<td>Username &nbsp;&nbsp; </td>
+    					<td><input class="in_dat" type="text" name="username"></td>
+    				</tr>
+    				<tr>
+    					<td>Password &nbsp;&nbsp;</td>
+    					<td><input class="in_dat" type="password" name="password"></td>
+    				</tr>
+    			</table>
+    			<button class="but_" type="submit">Login</button>
+    		</form>
+    	</div>
+    </center>
     </div>
-
 
     <footer>
         <div class="foot">
@@ -86,16 +79,6 @@
         </center>
         </div>
     </footer>
-</body>
-<!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
-<script src="script.js"></script> -->
 
+</body>
 </html>
