--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
     <title>Go Healthy</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -18,7 +22,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light bg_color nav_fixed">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img class="img_logo" src="assests/logo3.png" alt="" srcset="" /></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -35,7 +40,7 @@
                     <li class="nav-item">
                         <a class="nav-link txt_color btn_4" href="about.html">About Us</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item btn_nav">
                         <a class="nav-link txt_color login_btn" href="about.html">
                             <div>login</div>
                             <div class="arrow_" style="font-size: 1rem">→</div>
@@ -48,7 +53,7 @@
 
 
 
-    
+
 
     <div class="hero-section">
         <div class="title_section">
@@ -79,11 +84,11 @@
                 <h1>Go Healthy</h1>
             </div>
             <center>
-            <div class="social">
-                <p>Made with ♥ by Ishtiaq - Veerraju - Venkatesh</p>
+                <div class="social">
+                    <p>Made with ♥ by Ishtiaq - Veerraju - Venkatesh</p>
 
-            </div>
-        </center>
+                </div>
+            </center>
         </div>
     </footer>
 </body>
